<resources>
    <string name="app_name">SparkAdmin</string>
    <string name="select_file">Select File</string>
    <string name="add_profile">add profile</string>
    <string name="constitution_error_message">No Constituion Has been Uploaded</string>
    <string name="add_constitution_csv">Upload Constitution CSV</string>
    <string name="password">password</string>
    <string name="email_address">Email Address</string>
    <string name="access_token">Access Token</string>
    <string name="display_name">Display Name</string>
    <string name="department_name">Department Name</string>
    <string-array name="file_type">
        <item>Select File type</item>
        <item>Doc file</item>
        <item>PDF</item>
        <item>Power point</item>
    </string-array>
    <string-array name="post_type">
        <item>File Post</item>
        <item>Blog Post</item>
    </string-array>
</resources>
