<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@drawable/blurry"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_height="match_parent">
    <LinearLayout
        android:orientation="vertical"
        android:layout_gravity="center"
        android:fitsSystemWindows="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <RelativeLayout
            android:layout_margin="16dp"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <de.hdodenhof.circleimageview.CircleImageView
                android:layout_width="120dp"
                android:src="@drawable/default_logo"
                android:id="@+id/imv_admin_photo"
                android:layout_height="120dp"/>
            <android.support.design.widget.FloatingActionButton
                android:src="@drawable/ic_add_black"
                android:background="@color/colorWhite"
                app:backgroundTint="@color/colorWhite"
                app:fabSize="mini"
                android:id="@+id/fab_image"
                android:layout_marginLeft="78dp"
                android:layout_alignBottom="@id/imv_admin_photo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </RelativeLayout>

        <EditText
            android:background="@drawable/edit_text_normal"
            android:id="@+id/edt_display_name"
            android:hint="@string/display_name"
            android:layout_margin="8dp"
            android:padding="8dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <LinearLayout
            android:orientation="vertical"
            android:visibility="gone"
            android:id="@+id/sign_up_with_email_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:background="@drawable/edit_text_normal"
                android:id="@+id/edt_email"
                android:hint="@string/email_address"
                android:layout_margin="8dp"
                android:inputType="textEmailAddress"
                android:padding="8dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
            <EditText
                android:background="@drawable/edit_text_normal"
                android:id="@+id/edt_password"
                android:hint="@string/password"
                android:layout_margin="8dp"
                android:inputType="textPassword"
                android:padding="8dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </LinearLayout>


        <EditText
            android:background="@drawable/edit_text_normal"
            android:id="@+id/edt_access_token"
            android:hint="@string/access_token"
            android:layout_margin="8dp"
            android:padding="8dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <EditText
            android:background="@drawable/edit_text_normal"
            android:id="@+id/edt_department_name"
            android:hint="@string/department_name"
            android:layout_margin="8dp"
            android:padding="8dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <EditText
            android:background="@drawable/edit_text_normal"
            android:id="@+id/edt_association_name"
            android:hint="Association Name e.g nacoss"
            android:layout_margin="8dp"
            android:padding="8dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <Button
            android:id="@+id/btn_sign_up"
            android:layout_width="250dp"
            android:layout_gravity="center_horizontal"
            android:layout_margin="8dp"
            android:textColor="@color/colorWhite"
            android:background="#79050d3f"
            android:layout_height="wrap_content"
            android:text="Sign Up"/>
    </LinearLayout>
</ScrollView>
